@@ -61,6 +61,29 @@ Description: HTTP proxy server, debug symbols
  .
  This package provides the debugging symbols for the optimized build.
 
+Package: cm4all-beng-proxy-toi
+Architecture: any
+Depends: ${shlibs:Depends}, cm4all-beng-proxy (= ${source:Version})
+Replaces: cm4all-beng-proxy
+Conflicts: cm4all-beng-proxy-dbg, cm4all-beng-proxy-optimized
+Description: HTTP proxy server, TOI build
+ BENG proxy is an HTTP proxy server which includes a HTML template
+ processor.
+ .
+ This package contains a binary with compile-time settings specific
+ for T-Online.
+
+Package: cm4all-beng-proxy-toi-dbg
+Section: non-free/devel
+Architecture: any
+Depends: cm4all-beng-proxy-toi (= ${binary:Version})
+Conflicts: cm4all-beng-proxy-dbg, cm4all-beng-proxy-optimized-dbg
+Description: HTTP proxy server, debug symbols
+ BENG proxy is an HTTP proxy server which includes a HTML template
+ processor.
+ .
+ This package provides the debugging symbols for the TOI build.
+
 Package: cm4all-jailed-beng-proxy-delegate-helper
 Architecture: any
 Depends: cm4all-jailed-root-lib (>= 0.4.3)
